# cosmic-applets

./: Cargo.toml
cosmic-app-list/: Cargo.toml
cosmic-app-list/src/: app.rs  buffer.rs  capture.rs  dmabuf.rs  lib.rs  screencopy.rs  wayland_handler.rs
cosmic-applet-combo/: Cargo.toml
cosmic-applet-combo/src/: app.rs  lib.rs  main.rs
cosmic-applet-quick-settings/: Cargo.toml
cosmic-applet-quick-settings/src/: main.rs
